--- a/index.html
+++ b/index.html
@@ -50,10 +50,30 @@
         </div>
     </div>
     <div class="container main-container">
-        <h4>Welcome and say hi to the camera =D</h4>
+        <div class="row">
+            <div class="col-8">
+                <h4>Welcome and say hi to the camera =D</h4>
+            </div>
+            <div class="col">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="separator" value=";" id="semicolomn" checked>
+                    <label class="form-check-label" for="semicolomn">
+                      European
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="separator" value="," id="comma" >
+                    <label class="form-check-label" for="comma">
+                      Fuck Yeah!
+                    </label>
+                  </div>
+            </div>
+        </div>
+          
+        
         <hr>
         <div class="row">
-            <div class="col-4">
+            <div class="col-6">
                 <label for=""><b>Select the properties you need</b></label>
                 <hr>
                 <div class="form-check">
@@ -132,7 +152,7 @@
     <script>
 
         var data = [];
-        var separator = ",";
+        var separator = document.querySelector('input[name="separator"]:checked').value;
 
         function downloadPlayersData(){
 
