--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 }
             })
 
-            var csvContent = `data:text/csv;charset=utf-8,${columns.join(separator)}\r\n`;
+            var csvContent = `data:text/csv;charset=utf-8,%EF%BB%BF,${columns.join(separator)}\r\n`;
 
             var filteredData = []
 
