--- a/index.html
+++ b/index.html
@@ -152,9 +152,11 @@
     <script>
 
         var data = [];
-        var separator = document.querySelector('input[name="separator"]:checked').value;
+        
 
         function downloadPlayersData(){
+
+            var separator = document.querySelector('input[name="separator"]:checked').value;
 
             var columns = []
             document.querySelectorAll("[property-name]").forEach(el => {
@@ -163,7 +165,7 @@
                 }
             })
 
-            var csvContent = `data:text/csv;charset=utf-8,%EF%BB%BF,${columns.join(separator)}\r\n`;
+            var csvContent = `${columns.join(separator)}\r\n`;
 
             var filteredData = []
 
@@ -181,7 +183,7 @@
 
             var encodedUri = encodeURI(csvContent);
             var link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
+            link.setAttribute("href", "data:text/csv;charset=utf-8,%EF%BB%BF" + encodedUri);
             link.setAttribute("download", "players.csv");
             document.body.appendChild(link);
 
