--- a/calendar.html
+++ b/calendar.html
@@ -14,6 +14,10 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.1.1/fullcalendar.min.css"
         integrity="sha512-Vs4N3trA4pgbqu2gBzX8eyC1J6xwUWDOisDuy1lq1sW+ZvUuQo74/Uuv3tBQsroSDaYU5N64d33LJ5g6gN0MsA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+
+        <style>
+            @media screen and (max-width:767px) { .fc-toolbar.fc-header-toolbar {font-size: 60%}}
+        </style>
 </head>
 
 <body>
