--- a/calendar.html
+++ b/calendar.html
@@ -262,7 +262,7 @@
             var calendar = new FullCalendar.Calendar(calendarEl, {
                 timeZone: 'UTC',
                 initialView: 'dayGridMonth',
-                initialDate: '2024-04-20',
+                // initialDate: '2024-04-20',
                 headerToolbar: {
                     left: 'prev,next today',
                     center: 'title',
