--- a/calendar.html
+++ b/calendar.html
@@ -42,6 +42,15 @@
                     /* line-height: 0.70em; */
                 }
             }
+
+            body{
+                background-image: url("mountain_rangecvvccvcv_as_wa161.png");
+                background-size: cover;
+            }
+            .cont{
+                background-color: #fffffff2;
+                padding: 0px  50px;
+            }
         </style>
 </head>
 
@@ -50,7 +59,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xl-2"></div>
-            <div class="col-lg-12 col-xl-8 pt-5 pb-5 shadow-5-strong">
+            <div class="col-lg-12 col-xl-8 pt-5 pb-5 shadow-5-strong cont">
                 <div id="calendar"></div>
             </div>
         </div>
